@@ -1,8 +1,11 @@
 #ifndef AUDIO_H
 #define AUDIO_H
 #include <3ds.h>
+#include "savegame.h"
 
 void init_audio();
+void read_audio_settings(struct SaveGame* savegame);
+void write_audio_settings(struct SaveGame* savegame);
 int toggle_audio();
 int is_audio_enabled();
 int is_audio_only_fx();
@@ -15,5 +18,4 @@ void stop_audio();
 void play_sound(u8 sound);
 void update_audio();
 void deinit_audio();
-
 #endif
