@@ -1,5 +1,6 @@
 Version 0.4
 - Added custom sounds and music
+- Audio settings are saved now
 - Fixed level: Wicked 2
 - Corrected fade-in and fade-out time
 - Removed sf2d
